Fixed image size spacing issues and fixed color issues for page parts

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -6,3 +6,46 @@
 .beaverorange {
   color: #d73f09;
 }
+
+.text-bg-white {
+  color: #000!important;
+  background-color: #fff!important;
+}
+
+.text-bg-special {
+  color: #fff!important;
+  background-color: #d73f09!important;
+}
+
+.pagination > li > a
+{
+    background-color: white;
+    color: black;
+}
+
+.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover
+{
+    background-color: #eee;
+    border-color: #ddd;
+}
+
+.pagination > .active > a
+{
+    color: white;
+    background-color: #d73f09 !Important;
+    border: solid 1px #d73f09 !Important;
+}
+
+.pagination > .active > a:hover
+{
+    background-color: #d73f09 !Important;
+    border: solid 1px #d73f09;
+}
+
+ul {
+  list-style-type: none;
+  padding-left:0;
+}
